# discord_bot_tygia

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
src/: main.rs
